client/src/styles/NewCategory.css
#add_new_category{
  width: 25%;
  display: inline-block;
  margin: 1%;
}

.h1NewCat {
  font-size: 350%;
  display: inline-flex;
}

.h2NewCat {
  font-size: 250%;
}

.piggybank {
  width: 30%;
  display: inline-flex;
  margin-bottom: 1%;
  margin-top: 1%;
}

.banner {
  margin-bottom: 2%;
  border-bottom: 2px solid black;
  border-top: 2px solid black;
  width: 60%;
  margin-left: 20rem;
}



.inputMaterial {
  font-size: 18px;
  padding: 10px 10px 10px 5px;
  display: block;
  width: 300px;
  border: none;
  border-bottom: 1px solid #757575;
  margin: auto;
}

.inputMaterial:focus {
  outline: none;
} 

.bar {
  position: relative;
  display: block;
  width: 315px;
  margin: auto;
}

.bar:before, .bar:after {
  content: '';
  height: 2px;
  width: 0;
  bottom: 1px;
  position: absolute;
  background: #009688; 
  transition:0.2s ease all; 
}


.bar:before {
  left:50%;
}
.bar:after {
  right:50%; 
}

.inputMaterial:focus ~ .bar:before, 
.inputMaterial:focus ~ .bar:after {
  width: 50%;
}

.inputMaterial:focus ~ .highlight {
  animation:inputHighlighter 0.3s ease;
}

